# SearchViewer

./: .gitignore  README.md  pyproject.toml
.superpowers/brainstorm/24872-1779451170/content/: layout-options.html
.superpowers/brainstorm/24872-1779451170/state/: server-stopped
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
packaging/: SearchViewerSettings.example.yaml  searchviewer.spec  searchviewer_launcher.py
scripts/: build_exe.ps1
src/searchviewer/: __init__.py  __main__.py  app.py  backend.py  diagnostics.py  distribution.py  frontend.py  launcher.py
tests/: test_api.py  test_backend_core.py  test_diagnostics.py  test_distribution_backend.py  test_distribution_settings.py  test_launcher.py
